src/test/rustdoc-ui/intra-link-span-ice-55723.stderr
error: `[i]` cannot be resolved, ignoring it...
  --> $DIR/intra-link-span-ice-55723.rs:21:10
   |
LL | /// （arr[i]）
   |           ^ cannot be resolved, ignoring
   |
note: lint level defined here
  --> $DIR/intra-link-span-ice-55723.rs:13:9
   |
LL | #![deny(intra_doc_link_resolution_failure)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: to escape `[` and `]` characters, just add '/' before them like `/[` or `/]`

